<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wardrob.wardrob.III_newitem.NewItemActivity"
    android:background="@drawable/main_gradient_2">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- HEADER -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/default_category"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="left"
                    android:src="@drawable/shirt" />

                <TextView
                    android:id="@+id/default_category_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/new_item_default_category"
                    android:textSize="16sp"
                    android:typeface="normal" />

            </LinearLayout>

            <!-- PHOTO-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/cloth_img"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/default_img" />

                <ImageButton
                    android:id="@+id/btn_take_photo"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:foregroundGravity="center"
                    android:onClick="onTakePhoto"
                    android:scaleType="centerInside"
                    android:src="@drawable/camera_icon" />
            </LinearLayout>

            <!-- OTHER SETTINGS -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtItemNaming"
                    style="@style/itemTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_name" />

                <TextView
                    style="@style/itemTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_category" />

                <Spinner
                    style="@style/spinnerDefaultStyle"
                    android:id="@+id/sprCategorySelection"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"/>

                <TextView
                    style="@style/itemTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_relation" />

                <Spinner
                    style="@style/spinnerDefaultStyle"
                    android:id="@+id/sprRelationsSelection"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    style="@style/itemTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_color" />

                <com.rarepebble.colorpicker.ColorPickerView
                    android:id="@+id/colorPicker"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    app:colorpicker_showAlpha="true"
                    app:colorpicker_showHex="true"
                    app:colorpicker_showPreview="true"/>



                <EditText
                    android:id="@+id/edtDateSet"
                    style="@style/itemTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/item_purchase_date"
                    android:onClick="onDateDropDownDr" />


                <EditText
                    android:id="@+id/edtPrice"
                    style="@style/itemTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_price" />

                <TextView
                    style="@style/itemTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_warms_level" />

                <RatingBar
                    android:id="@+id/ratingBarWarmsLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:max="5"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:layout_gravity="center"/>

                <TextView
                    style="@style/itemTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_attitude" />

                <RatingBar
                    android:id="@+id/ratingBarAttitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:max="5"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:layout_gravity="center"/>

                <CheckBox
                    android:id="@+id/ckbxSecurity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:checked="false"
                    android:text="@string/item_vision" />

                <TextView
                    style="@style/itemTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_washing" />

                <Spinner
                    style="@style/spinnerDefaultStyle"
                    android:id="@+id/sprWashingSelection"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

                <Spinner
                    style="@style/spinnerDefaultStyle"
                    android:id="@+id/sprDrySelection"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

                <Spinner
                    style="@style/spinnerDefaultStyle"
                    android:id="@+id/sprIroningSelection"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

                <Spinner
                    style="@style/spinnerDefaultStyle"
                    android:id="@+id/sprProfCleaningSelection"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

                <Spinner
                    style="@style/spinnerDefaultStyle"
                    android:id="@+id/sprWhiteningSelection"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

            </LinearLayout>

            <!-- BUTTON -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSaveResults"
                    android:layout_marginBottom="30dp"
                    android:text="SAVE" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
