<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wardrob.wardrob.I_startup_new_member.LoginCreateActivity"
    android:orientation="vertical"
    android:background="@drawable/login_gradient_list"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/lCreateUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_create_your_avatar"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/camera_icon"
            android:layout_gravity="center"
            android:onClick="onMakeImageForAvatarButton"/>

        <EditText
            android:id="@+id/edtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/login_type_your_name"
            android:layout_gravity="center"/>

        <RadioGroup
            android:id="@+id/rbgGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/rdbtn_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"/>

            <RadioButton
                android:id="@+id/rdbtn_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"/>

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_chooser_save"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_rounded"
            android:onClick="onCreateFamilyMemberButton"/>

    </LinearLayout>


</LinearLayout>
